--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 # Created by https://www.gitignore.io/api/unity
 # Edit at https://www.gitignore.io/?templates=unity
 
+Assets/Firebase
+Assets/Plugins/Android
+Assets/Plugins/iOS
+
 ### Unity ###
 # This .gitignore file should be placed at the root of your Unity project directory
 #
